# excel-splitter

./: README.md  cli.py  excel_splitter.py  pyproject.toml  requirements.txt
